// Vitest Snapshot v1

exports[`<BLASTInProgress /> > should render when [rid=%p] ABC123 1`] = `
<Styled(Box)>
  <Loader
    color="primary"
    size="16px"
  />
  <div>
    <div>
      <span>
        BLAST in progress
      </span>
      <RIDLink
        rid="ABC123"
      />
    </div>
    <RIDTiming
      interval={5}
      lastCheckedAt="2018-02-14T17:12:00.000000Z"
    />
  </div>
</Styled(Box)>
`;

exports[`<BLASTInProgress /> > should render when [rid=%p] null 1`] = `
<Styled(Box)>
  <Loader
    color="primary"
    size="16px"
  />
  <div>
    <div>
      <span>
        BLAST in progress
      </span>
      <RIDLink
        rid={null}
      />
    </div>
    <RIDTiming
      interval={5}
      lastCheckedAt="2018-02-14T17:12:00.000000Z"
    />
  </div>
</Styled(Box)>
`;

exports[`<BLASTResults /> > should render 1`] = `
<BoxGroup>
  <Styled(BoxGroupHeader)>
    <strong>
      NCBI BLAST
    </strong>
    <Button
      color="blue"
    >
      <Icon
        name="redo"
      />
      Retry
    </Button>
  </Styled(BoxGroupHeader)>
  <Table>
    <thead>
      <tr>
        <th>
          Accession
        </th>
        <th>
          Name
        </th>
        <th>
          E-value
        </th>
        <th>
          Score
        </th>
        <th>
          Identity
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        key="0"
      >
        <td>
          <ExternalLink
            href="https://www.ncbi.nlm.nih.gov/nuccore/NC123"
          >
            NC123
          </ExternalLink>
        </td>
        <td>
          test
        </td>
        <td>
          3
        </td>
        <td>
          1
        </td>
        <td>
          0.50
        </td>
      </tr>
    </tbody>
  </Table>
</BoxGroup>
`;

exports[`<NuVsBLAST /> > should render 1`] = `
<BLASTResults
  hits={
    [
      {
        "accession": "BAR123",
        "align_len": 4,
        "evalue": 3,
        "identity": 2,
        "name": "bar",
        "score": 1,
      },
    ]
  }
  onBlast={[Function]}
/>
`;

exports[`<NuVsBLAST /> > should render alert when no blast data available 1`] = `
<Alert
  color="purple"
  level={true}
>
  <Icon
    name="info-circle"
  />
  <span>
    This sequence has no BLAST information attached to it.
  </span>
  <Styled(Button)
    color="purple"
    icon="cloud"
    onClick={[Function]}
  >
    BLAST at NCBI
  </Styled(Button)>
</Alert>
`;

exports[`<NuVsBLAST /> > should render with an in-progress BLAST 1`] = `
<BLASTInProgress
  interval={5}
  lastCheckedAt="2018-02-14T17:12:00.000000Z"
  rid="ABC123"
/>
`;

exports[`<NuVsBLAST /> > should render with no BLAST hits 1`] = `
<Box>
  <BoxTitle>
    NCBI BLAST
  </BoxTitle>
  <p>
    No BLAST hits found.
  </p>
</Box>
`;
